--- a/app/globals.css
+++ b/app/globals.css
@@ -9,20 +9,11 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
   background-color: #272B30;
   color: #272b30;
-}
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
 }
