--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
-:root {}
-
+:root {
+  --base-font-size: 16px;
+}
 
 * {
   box-sizing: border-box;
@@ -9,6 +10,7 @@
 
 html,
 body {
+  font-size: var(--base-font-size);
   padding: 0;
   margin: 0;
   width: 100%;
